# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  notify-telegram.yml  security.yml
alembic/: README  env.py  script.py.mako
app/: main.py
app/common/dependencies/: dependencies.py  dependencies_schemas.py
app/core/: config.py  database.py  ollama.py  orm_base.py  security.py  startup_ollama.py
app/core/dependencies/: pagination.py
app/modules/admin/: API.md
app/modules/auth/: API.md  router.py  schemas.py  service.py
app/modules/chat/: API.md  connection_manager.py  models.py  off_platform_guard.py  participant.py  repository.py  router.py  schemas.py  service.py  ws_routes.py
app/modules/deals/: API.md  models.py  schemas.py
app/modules/disputes/: API.md  models.py  schemas.py
app/modules/files/: API.md
app/modules/lawyer_profiles/: API.md  models.py  schemas.py
app/modules/offers/: API.md  models.py  schemas.py
app/modules/requests/: API.md  models.py  repository.py  router.py  schemas.py  service.py
app/modules/reviews/: API.md  models.py  schemas.py
app/modules/users/: API.md  models.py  repository.py  router.py  schemas.py
